AO3-4453 Remove padding causing overlap issues on dashboard links

--- a/public/stylesheets/site/2.0/25-media-midsize.css
+++ b/public/stylesheets/site/2.0/25-media-midsize.css
@@ -21,6 +21,7 @@
 #dashboard ul {
   border: none;
   display: inline;
+  padding: 0;
   text-align: left;
 }
 
